test/correct/PatternMatchBug4.hs
module PatternMatchBug4 where

main = f ["a", "a"]

f ["a", x] = x
   