test/typeerrors/Heuristics/UnifierPatList.hs
test [True, "hello"] = 0
